--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Potifólio Gustavo Guanabara</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="shortcut icon" href="favicon.svg" type="image/svg">
 </head>
 <body>
 
     <header>
-
+        <nav id="menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Formação</a></li>
+                <li><a href="#">Projetos</a></li>
+                <li><a href="#">Tema</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
