--- a/index.html
+++ b/index.html
@@ -23,7 +23,23 @@
     </header>
 
     <main>
-        <h1>Em breve...</h1>
+        <section id="ficha">
+            <img src="imagens/guanabara-perfil.jpg" alt="Gustavo Guanabara" class="foto">
+            <h1>Gustavo Guanabara</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel fuga provident quam architecto minima sequi sapiente. Animi quaerat distinctio iste veniam adipisci aliquam ullam, error esse molestias aperiam velit. Sit.</p>
+            <div id="social">
+                <a href="https://br.linkedin.com/in/guanabara" target="_blank" rel="nofollow"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/gustavoguanabara" target="_blank" rel="nofollow"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.youtube.com/@cursoemvideo" target="_blank" rel="nofollow"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.instagram.com/gustavoguanabara/" target="_blank" rel="nofollow"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.cursoemvideo.com/" target="_blank" rel="nofollow"><i class="fa-solid fa-globe"></i>
+                </a>
+            </div>
+        </section>
+
+        <section id="detalhes">
+
+        </section>
     </main>
 
     <footer>
