Área de formações

--- a/index.html
+++ b/index.html
@@ -47,10 +47,181 @@
 
             <article id="skills">
                 <h2><i class="fa-solid fa-brain"></i>Minhas skills</h2>
+
+
+                <div id="skill-container">
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i>
+                                HTML5
+                            </span>
+                            <span class="porcent">
+                                90%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 90%;"></div>
+                        </div>
+                    </div>
+                </div> <!-- Fim skill-HTML5 -->
+
+
+                <div id="skill-container">
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i>
+                                CSS3
+                            </span>
+                            <span class="porcent">
+                                80%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 80%;"></div>
+                        </div>
+                    </div>
+                </div> <!-- Fim skill-CSS3 -->
+
+
+                <div id="skill-container">
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i>
+                                JavaScript
+                            </span>
+                            <span class="porcent">
+                                75%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 75%;"></div>
+                        </div>
+                    </div>
+                </div> <!-- Fim skill-JavaScript -->
+
+
+                <div id="skill-container">
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-code"></i>
+                                PHP
+                            </span>
+                            <span class="porcent">
+                                60%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 60%;"></div>
+                        </div>
+                    </div>
+                </div> <!-- Fim skill-PHP -->
+
+
+                <div id="skill-container">
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-user"></i>
+                                Comunicação
+                            </span>
+                            <span class="porcent">
+                                95%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 95%;"></div>
+                        </div>
+                    </div>
+                </div> <!-- Fim skill-Comunicação -->
+
+
+                <div id="skill-container">
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-user"></i>
+                                Trabalho em equipe
+                            </span>
+                            <span class="porcent">
+                                100%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 100%;"></div>
+                        </div>
+                    </div>
+                </div> <!-- Fim skill-Trabalho em equipe -->
+
+
+                <div id="skill-container">
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-user"></i>
+                                Adaptabilidade
+                            </span>
+                            <span class="porcent">
+                                90%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 90%;"></div>
+                        </div>
+                    </div>
+                </div> <!-- Fim skill-Adaptabilidade -->
+
+
             </article> <!-- Fim article#skills -->
 
             <article id="formacao">
                 <h2><i class="fa-solid fa-graduation-cap"></i>Formação</h2>
+
+                <div id="formacao-container">
+                    <div class="curso">
+                        <p class="periodo">1991 - 1994</p>
+                        <h3 class="instituicao">Escola Técnica Carioca</h3>
+                        <p class="titulacao">Técnico em Informática</p>
+                    </div>
+
+
+                    <div class="curso">
+                        <p class="periodo">1995 - 2000</p>
+                        <h3 class="instituicao">Instituto Superior da Tecnologia</h3>
+                        <p class="titulacao">Bacharelado em Ciências da Computação</p>
+                    </div>
+
+
+                    <div class="curso">
+                        <p class="periodo">2000</p>
+                        <h3 class="instituicao">Centro de Graduação de Professores</h3>
+                        <p class="titulacao">Licenciatura em Informática</p>
+                    </div>
+
+
+                    <div class="curso">
+                        <p class="periodo">2001 -2003</p>
+                        <h3 class="instituicao">Laboratório de Docência Superior</h3>
+                        <p class="titulacao">Docência para Ensino Superior Profissional</p>
+                    </div>
+
+
+                    <div class="curso">
+                        <p class="periodo">2009 -2010</p>
+                        <h3 class="instituicao">Fundação para Ensino à Distância</h3>
+                        <p class="titulacao">Especializaçã0 para produção em ambientes EAD</p>
+                    </div>
+
+
+                    <div class="curso">
+                        <p class="periodo">2021 -2024</p>
+                        <h3 class="instituicao">Centro de Inteligência Artificial</h3>
+                        <p class="titulacao">Técnicas para aplicação de IAS</p>
+                    </div>
+                </div>
             </article> <!-- Fim article#formacao -->
 
             <article id="projetos">
