--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     <header>
         <nav id="menu">
             <ul>
-                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-brain"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-graduation-cap"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-trowel-bricks"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-moon"></i></a></li>
+                <li><a href="#video" class="link"><i class="fa-solid fa-house"></i></a></li>
+
+                <li><a href="#skills" class="link"><i class="fa-solid fa-brain"></i></a></li>
+
+                <li><a href="#formacao" class="link"><i class="fa-solid fa-graduation-cap"></i></a></li>
+
+                <li><a href="#projetos" class="link"><i class="fa-solid fa-trowel-bricks"></i></a></li>
+
+                <li><a href="#" id="botao-tema"><i class="fa-solid fa-moon"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -41,7 +45,7 @@
             <article id="video">
                 <h2><i class="fa-solid fa-handshake"></i>Deixe-me apresentar</h2>
                 <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/VdWfSfWA_BQ?si=Ox4iCMarU3A1zGwj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=Dvlix-xbOPs&list=RDEM25VOiJuwuTp-R69oawuxgg&index=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </article> <!-- Fim article#video -->
 
@@ -226,12 +230,112 @@
 
             <article id="projetos">
                 <h2><i class="fa-solid fa-trowel-bricks"></i>Projetos</h2>
+
+
+                <div id="projeto-container">
+                    <div class="projeto">
+                        <a href="#" target="_blank">
+                            <img src="imagens/projeto-01-videos.jpg" alt="projeto 1" class="foto">
+                        </a>
+                        <div class="projeto-info">
+                            <p class="periodo">2022</p>
+                            <h3 class="titulo">Projeto de vídeos</h3>
+                            <p>Projeto construido para treinar a inserção de vídeos em nosso site.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum esse necessitatibus excepturi inventore. Iure nisi praesentium non dolorem, optio odio amet dignissimos dolor perspiciatis corrupti voluptate tempora inventore illo delectus!</p>
+                            </details>
+                        </div>
+                    </div> <!-- Fim projeto 1 -->
+
+
+                    <div class="projeto">
+                        <a href="https://matheusjorgealves.github.io/projeto-cordel/" target="_blank">
+                            <img src="imagens/projeto-02-cordel.jpg" alt="pojeto 2" class="foto">
+                        </a>
+                        <div class="projeto-info">
+                            <p class="periodo">2023</p>
+                            <h3 class="titulo">Projeto Cordel</h3>
+                            <p>Projeto construido para treinar o efeito paralax em imagens</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum esse necessitatibus excepturi inventore. Iure nisi praesentium non dolorem, optio odio amet dignissimos dolor perspiciatis corrupti voluptate tempora inventore illo delectus!</p>
+                            </details>
+                        </div>
+                    </div> <!-- Fim projeto 2 -->
+
+
+                    <div class="projeto">
+                        <a href="https://matheusjorgealves.github.io/projeto-android/" target="_blank">
+                            <img src="imagens/projeto-03-android.jpg" alt="projeto 3" class="foto">
+                        </a>
+                        <div class="projeto-info">
+                            <p class="periodo">2024</p>
+                            <h3 class="titulo">Projeto Android</h3>
+                            <p>Projeto construido para treinar conteúdos e imagens dinâmicas</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum esse necessitatibus excepturi inventore. Iure nisi praesentium non dolorem, optio odio amet dignissimos dolor perspiciatis corrupti voluptate tempora inventore illo delectus!</p>
+                            </details>
+                        </div>
+                    </div> <!-- Fim projeto 3 -->
+
+
+                    <div class="projeto">
+                        <a href="imagens/projeto-04-links.jpg" target="_blank">
+                            <img src="imagens/projeto-04-links.jpg" alt="projeto 4" class="foto">
+                        </a>
+                        <div class="projeto-info">
+                            <p class="periodo">2024</p>
+                            <h3 class="titulo">Projeto Links</h3>
+                            <p>Projeto construido para treinar o uso de links</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum esse necessitatibus excepturi inventore. Iure nisi praesentium non dolorem, optio odio amet dignissimos dolor perspiciatis corrupti voluptate tempora inventore illo delectus!</p>
+                            </details>
+                        </div>
+                    </div> <!-- Fim projeto 4 -->
+                    
+
+                    <div class="projeto">
+                        <a href="https://matheusjorgealves.github.io/projeto-login/" target="_blank">
+                            <img src="imagens/projeto-05-login.jpg" alt="projeto 5" class="foto">
+                        </a>
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Login</h3>
+                            <p>Projeto construido para treinar a construção de formulários</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum esse necessitatibus excepturi inventore. Iure nisi praesentium non dolorem, optio odio amet dignissimos dolor perspiciatis corrupti voluptate tempora inventore illo delectus!</p>
+                            </details>
+                        </div>
+                    </div> <!-- Fim projeto 5 -->
+
+
+                    <div class="projeto">
+                        <a href="#" target="_blank">
+                            <img src="imagens/projeto-06-album.jpg" alt="projeto 6" class="foto">
+                        </a>
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Album</h3>
+                            <p>Projeto construido para treinar o uso de imagens e grid-layout</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum esse necessitatibus excepturi inventore. Iure nisi praesentium non dolorem, optio odio amet dignissimos dolor perspiciatis corrupti voluptate tempora inventore illo delectus!</p>
+                            </details>
+                        </div>
+                    </div> <!-- Fim projeto 6 -->
+                </div>
+
+
             </article> <!-- Fim article#projetos -->
         </section>
     </main>
 
     <footer>
-
+        <p>Portifólio desenvolvido por <a href="https://www.youtube.com/@cursoemvideo" target="_blank">Gustavo Guanabra</a> em 2025</p>
     </footer>
 
 
