modo escuro e claro

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon.svg" type="image/svg">
     <script src="https://kit.fontawesome.com/f5e153119b.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="escuro">
 
     <header>
         <nav id="menu">
@@ -21,7 +21,7 @@
 
                 <li><a href="#projetos" class="link"><i class="fa-solid fa-trowel-bricks"></i></a></li>
 
-                <li><a href="#" id="botao-tema"><i class="fa-solid fa-moon"></i></a></li>
+                <li><a href="#" class="link" id="botao-tema"><i class="fa-solid fa-moon"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -45,7 +45,7 @@
             <article id="video">
                 <h2><i class="fa-solid fa-handshake"></i>Deixe-me apresentar</h2>
                 <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=Dvlix-xbOPs&list=RDEM25VOiJuwuTp-R69oawuxgg&index=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/d4iGRWvlfMY?si=v-FCQJNv5k2oh5D7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </article> <!-- Fim article#video -->
 
